Testing mostly works

--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,16 @@
 !*.go
 !go.sum
 !go.mod
-!/example/*/**
+!/example/game/Assets/**/*
+!/example/game/Logs/**/*
+!/example/game/Packages/**/*
+!/example/game/ProjectSettings/**/*
+!/example/game/UserSettings/*•/*
+!/example/game/Assembly-CSharp.csproj
+!/example/game/Assembly-CSharp-Editor.csproj
 !README.md
 !LICENSE
 !dagger.json
-
 
 # !Makefile
 
