--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 
 # But not these files...
 !/.gitignore
+!/.gitattributes
+!/**/.gitignore
+!/**/.gitattributes
 
 !*.go
 !go.sum
@@ -18,6 +21,7 @@
 !LICENSE
 !dagger.json
 !/nunit-transforms/**/* 
+!VERSION
 
 # !Makefile
 
